# KittyLogs

./: CMakeLists.txt  README.md  build.sh  fake_main.cpp
include/kittyLogs/: Logger.h  log.h  task_support.h
include/kittyLogs/details/: Color.h  formatters.h  sinks.h
tests/: CMakeLists.txt  test.cpp
